@@ -3,9 +3,8 @@ package metadev.digital.metacustomitemslib;
 import org.bukkit.Bukkit;
 
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.UnknownHostException;
+import java.net.*;
+import java.nio.charset.StandardCharsets;
 
 public class HttpTools {
 
@@ -47,10 +46,10 @@ public class HttpTools {
 					if (redirect) {
 
 						// get redirect url from "location" header field
-						String newUrl = urlConnect.getHeaderField("Location");
+						URI newURI = new URI(URLEncoder.encode(urlConnect.getHeaderField("Location"), StandardCharsets.UTF_8));
 
 						// open the new connnection again
-						urlConnect = (HttpURLConnection) new URL(newUrl).openConnection();
+						urlConnect = (HttpURLConnection) newURI.toURL().openConnection();
 
 						status = urlConnect.getResponseCode();
 						Bukkit.getConsoleSender().sendMessage("[CORE] status2="+status);
@@ -65,8 +64,10 @@ public class HttpTools {
 					callback.onError();
 				} catch (IOException e) {
 					callback.onError();
-				}
-			}
+				} catch (URISyntaxException e) {
+					callback.onError();
+                }
+            }
 		};
 	}
 
